re PR c++/21336 (Internal compiler error when using custom new operators)

PR c++/21336
	* cp-tree.h (grok_op_properties): Remove friendp parameter.
	* decl.c (grokfndecl): Adjust call.
	(grok_op_properties): Determine the class of which the function is
	a member by looking at its DECL_CONTEXT, not current_class_type.
	* pt.c (tsubst_decl): Adjust call to grok_op_properties.

	PR c++/21336
	* g++.dg/template/new2.C: New test.

From-SVN: r100541